# mbutil

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: release.yml
mbutil/: __init__.py  cli.py  util.py
test/: test.py
