[project]
name = "smellman-mbutil"
version = "0.3.7"
description = "An importer and exporter for MBTiles"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.37.38",
]

authors = [
    { name = "Tom MacWright", email = "tom@macwright.org" }
]

maintainers = [
    { name = "Taro Matsuzawa", email = "btm@tech.email.ne.jp" }
]

license = { file = "LICENSE.md" }
keywords = ["map", "tiles", "mbtiles"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
mb-util = "mbutil.cli:main"

[dependency-groups]
dev = [
  "pytest",
  "moto",
  "hatch",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "moto"
]

[tool.hatch.envs.default.scripts]
test = "pytest test/test.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mbutil"]
